# treasure

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml
backend/: Dockerfile  config.example.toml  gunicorn.conf.py  pyproject.toml
backend/app/: main.py
backend/app/api/: accounts.py  audit_log.py  categories.py  health.py
backend/app/audit/: context.py  middleware.py  queries.py  sanitize.py  service.py
backend/app/auth/: backend.py  deps.py  manager.py  schemas.py
backend/app/cli/: seed_categories.py  setup.py
backend/app/core/: config.py  currencies.py  db.py  encryption.py
backend/app/models/: account.py  category.py  user.py
backend/app/repositories/: account.py  base.py  category.py
backend/data/: default_categories.json
backend/tests/: conftest.py  test_accounts.py  test_audit_api.py  test_audit_context.py  test_audit_middleware.py  test_audit_queries.py  test_audit_sanitize.py  test_audit_service.py  test_auth.py  test_categories.py  test_config.py  test_encryption.py  test_health.py
backend/tests/fixtures/: accounts.py  categories.py  users.py
docker/: docker-compose.dev.yml  docker-compose.yml
docs/: configuration.md  epics-and-stories.md  finance-tracker-requirements.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.json
frontend/src/: App.tsx
tasks/: __init__.py  backend.py  stack.py
